update icon for sevice

--- a/apps-solution/src/index.css
+++ b/apps-solution/src/index.css
@@ -3,3 +3,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradient-background {
+  background: linear-gradient(300deg, #2f3132, #181d21, #152e42);
+  background-size: 180% 180%;
+  animation: gradient-animation 21s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
