complete kriteria ready to submit

--- a/spa-2/src/index.css
+++ b/spa-2/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 [data-theme="dark"] {
-  @apply bg-slate-800 text-slate-100 hover:text-white;
+  @apply bg-slate-800 text-slate-100;
 }
 
 .form-control {
